--- a/index.html
+++ b/index.html
@@ -4,51 +4,53 @@
 <head>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
   <link rel="stylesheet" href="/css/styles.css">
-  <script src="js/scripts.js"></script>
   <script src="js/jquery-3.2.1.js"></script>
+  <script src="js/scripts.js"></script>
+
   <title>Pig Dice</title>
 </head>
 
 <body>
+
   <div class="container page-wrapper">
-    <center>
-      <h1>Pig Dice</h1></center>
+
+    <h1 class="page-header text-center">Pig Dice!</h1>
     <center><img src="img/dice.jpg" alt="img"></center>
     <div class="row">
-      <div class="col-xs-12" id="Player names:">
+      <div class="col-xs-12" id="eneter-player-name:">
         <div "well col-md-4 col-md-offset-4">
-          <form class="addNames">
-            <div class="col-sm-4 text center">
+          <form id="add-players">
+            <div class="form-group">
+              <label for="player-one-name">Enter First Name</label>
+              <input type="text" class="form control" id="player-one-name" placeholder="player one" required autofocus>
+            </div>
+            <div class="form-group">
+              <label for="player-two-name">Enter Second Name</label>
+              <input type="text" class="form control" id="player-two-name" placeholder="player two" required>
 
-              <select class="form-control" id="dice-type">
+            </div>
+            <button type="submit" class="btn btn-default stretch">Add Names</button>
+          </form>
+        </div>
+      </div>
+      <form>
+      <div class="row">
+        <div class ="col-xs-12" id="class-and-type" >
+        <select class="col-md-4" "form-control" id="dice-type">
                 <option>Two Dice Pig</option>
                 <option>Big Pig</option>
                 <option>Skunk</option>
 
               </select>
 
-              <select class="form-control" id="game-type">
+        <select class="col-md-4" "form-control" id="game-type">
                 <option>Easy</option>
                 <option>Hard</option>
               </select>
-
             </div>
 
-            <div class="form-group">
-              <label for="player-one">Player One</label>
-              <input type="text" class="form control" id="player-one">
-
-            </div>
-            <div class="form-group">
-              <label for="player-two">Player Two</label>
-              <input type="text" class="form control" id="player-two">
-
-            </div>
-            <button type="submit" name="btn btn-default stretch">Add Names</button>
-
-          </form>
-        </div>
       </div>
+    </form>
 
       <div class="col-xs-12" id="show-message">
         <div class="message-wrapper">
